# tfdnoisecpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  params.tfd  tfdnoise.cpp
include/: tfd.cpp  tfd.h
